hphp/hack/test/decl/tuple_hints_broken.php.typecheck.exp
File "tuple_hints_broken.php", line 3, characters 10-14:
Unbound name: `tuple` (Naming[2049])
File "tuple_hints_broken.php", line 3, characters 10-14:
Did you want a *tuple*? Try `(X,Y)`, not `tuple<X,Y>` (Typing[4100])
