hphp/hack/test/decl/tuple_hints_broken.php
<?hh

type A = tuple<int>;
